add builders and fix mailing address validation